    code. Simplified and improved the performance of the built-in methods
    asserta/1 and assertz/1 when asserting a clause for a new predicate.
    Simplified the updating of the internal table for dynamically defined
    predicates when using the built-in methods retract/1 and retractall/1.
    Simplified the compiler code used when creating new entities.

    Improved the performance of source file compilation by avoiding redundant
    cleaning of auxiliar compilation predicates.

    Modified the Logtalk compiler in order to interpret occurrences of":" in
    module meta-predicate directives as equivalent to "::" instead of "0" in
    Logtalk meta-predicate directives. This change follows the current trend
    for de facto standardization for meta-predicate directives.

    Improved compiler error checking for entity relations, detecting and
    reporting most incorrect attempts to extend, instantiate, specialize,
    import, implement, or complement the wrong kind of entities.

    Corrected a bug where the compilation (or dynamic creation) of parametric
    objects or parametric categories with instantiated parameters would fail
    to discard the parameter values in the runtime tables of defined entities.

    Updated the implementation of the built-in predicate logtalk_compile/2
    in order to ensure the same compiler options semantics for compiled code
    as the built-in predicate logtalk_load/2.

    Corrected a error handling issue in the implementation of the built-in
    predicates logtalk_compile/2 and logtalk_load/2 where the error terms
    would be wrapped in an extra error/2 term.

    Updated the Logtalk compiler in order to also delete the intermediate
    files generated by the back-end Prolog compilers when compiling the
    Prolog files generated by Logtalk with the "clean" flag is set to "on".

    Updated the built-in objects, "logtalk" and "debugger", and the built-in