@@ -26,7 +26,7 @@
 <pre>abolish(Predicate)
 abolish(Functor/Arity)</pre>
 <p>
-Removes a runtime declared dynamic predicate from an object database.
+Removes a runtime declared dynamic predicate or a local dynamic predicate from an object database.
 </p>
 
 <h4>Template and modes</h4>
@@ -74,7 +74,7 @@ Removes a runtime declared dynamic predicate from an object database.
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: April 29, 2009</span>
+		<span>Last updated on: November 15, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="../index.html#methods">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="asserta1.html">next</a></span><br/>
