@@ -26,7 +26,7 @@
 <pre>assertz(Head)
 assertz((Head:-Body))</pre>
 <p>
-Asserts a clause as the last one for an object's dynamic predicate. If the predicate is not already declared, then a dynamic predicate declaration is added to the object (assuming that the compiler option <code>dynamic_declarations</code> was switched on when the object was created or compiled).
+Asserts a clause as the last one for an object's dynamic predicate. If the predicate is not already declared, then a dynamic predicate declaration is added to the object (assuming that we are asserting locally or that the compiler option <code>dynamic_declarations</code> was switched on when the object was created or compiled).
 </p>
 <p>
 This method may be used to assert clauses for predicates that are not declared dynamic for dynamic objects provided that the predicates are declared in <em>this</em>. This allows easy initialization of dynamically created objects when writing constructors.
@@ -69,7 +69,7 @@ This method may be used to assert clauses for predicates that are not declared d
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: April 29, 2009</span>
+		<span>Last updated on: November 15, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="asserta1.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="clause2.html">next</a></span><br/>
